--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/furniture?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bedbathfurn?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=MySql8035
 
